--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,21 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+    --color-blue-*: initial;
+    --color-blue-50: #eef7ff;
+    --color-blue-100: #d8ebff;
+    --color-blue-200: #b9dcff;
+    --color-blue-300: #89c8ff;
+    --color-blue-400: #52aaff;
+    --color-blue-500: #2a85ff;
+    --color-blue-600: #1a69fd;
+    --color-blue-700: #0c4ee9;
+    --color-blue-800: #113fbc;
+    --color-blue-900: #143994;
+    --color-blue-950: #11255a;
+}
+
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
@@ -52,8 +67,8 @@
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(0.205 0 0);
-    --primary-foreground: oklch(0.985 0 0);
+    --primary: var(--color-blue-600);
+    --primary-foreground: var(--color-blue-50);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
     --muted: oklch(0.97 0 0);
@@ -65,11 +80,11 @@
     --border: oklch(0.922 0 0);
     --input: oklch(0.922 0 0);
     --ring: oklch(0.708 0 0);
-    --chart-1: oklch(0.646 0.222 41.116);
-    --chart-2: oklch(0.6 0.118 184.704);
-    --chart-3: oklch(0.398 0.07 227.392);
-    --chart-4: oklch(0.828 0.189 84.429);
-    --chart-5: oklch(0.769 0.188 70.08);
+    --chart-1: var(--color-blue-800);
+    --chart-2: var(--color-blue-700);
+    --chart-3: var(--color-blue-600);
+    --chart-4: var(--color-blue-500);
+    --chart-5: var(--color-blue-400);
     --radius: 0.625rem;
     --sidebar: oklch(0.985 0 0);
     --sidebar-foreground: oklch(0.145 0 0);
@@ -88,8 +103,8 @@
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.145 0 0);
     --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.985 0 0);
-    --primary-foreground: oklch(0.205 0 0);
+    --primary: var(--color-blue-600);
+    --primary-foreground: var(--color-blue-50);
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.985 0 0);
     --muted: oklch(0.269 0 0);
@@ -98,14 +113,14 @@
     --accent-foreground: oklch(0.985 0 0);
     --destructive: oklch(0.396 0.141 25.723);
     --destructive-foreground: oklch(0.637 0.237 25.331);
-    --border: oklch(0.269 0 0);
+    --border: oklch(1 0 0/10%);
     --input: oklch(0.269 0 0);
     --ring: oklch(0.439 0 0);
-    --chart-1: oklch(0.488 0.243 264.376);
-    --chart-2: oklch(0.696 0.17 162.48);
-    --chart-3: oklch(0.769 0.188 70.08);
-    --chart-4: oklch(0.627 0.265 303.9);
-    --chart-5: oklch(0.645 0.246 16.439);
+    --chart-1: var(--color-blue-800);
+    --chart-2: var(--color-blue-700);
+    --chart-3: var(--color-blue-600);
+    --chart-4: var(--color-blue-500);
+    --chart-5: var(--color-blue-400);
     --sidebar: oklch(0.205 0 0);
     --sidebar-foreground: oklch(0.985 0 0);
     --sidebar-primary: oklch(0.488 0.243 264.376);
@@ -117,10 +132,30 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+    * {
+        @apply border-border outline-ring/50;
     }
-  body {
-    @apply bg-background text-foreground;
+    body {
+        @apply bg-background text-foreground;
+    }
+}
+
+/* Waving animation */
+@theme {
+    --animate-waving: waving 2.5s infinite;
+    @keyframes waving {
+        50% {
+            transform: rotate(0deg);
+        }
+        10%,
+        30% {
+            transform: rotate(-11deg);
+        }
+        20% {
+            transform: rotate(13deg);
+        }
+        40% {
+            transform: rotate(8deg);
+        }
     }
 }
